updated screenshot, redme, and minor fix on card below

--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
       </div>
     </header>
     <main>
-      <div class="card-proof">
+      <div class="card-proof proof1">
         <div class="card-holder">
           <img src="images/image-colton.jpg" alt="">
           <div class="people-name">
             <span class="name">Colton Smith</span>
             <span class="buyer">Verified Buyer</span>
-            </div>
-            
-
+          </div>
+    
         </div>
         <p>"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order but we also received it in time. Excellent!</p>
       </div>
-      <div class="card-proof">
+      <div class="card-proof proof2">
         <div class="card-holder">
           <img src="images/image-irene.jpg" alt="">
             <div class="people-name">
@@ -88,7 +87,7 @@
         </div>
         <p>"Customer service always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and speed of delivery."</p>
       </div>
-      <div class="card-proof">
+      <div class="card-proof proof3">
         <div class="card-holder">
           <img src="images/image-anne.jpg" alt="">
             <div class="people-name">
